--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Etch and Sketch</title>
     <link rel="stylesheet" type="text/css" href="main.css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> 
     <script type="text/javascript" src="script.js"></script>
   </head>
   <body>
